Added get dimension values method to an endpoint
